# EthicalGuard

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  demo.py  index.html  pyproject.toml  runserver.py
.github/workflows/: main.yml
configs/: ds_config_zero3.json  model_config.json
developer_manual/: index.html
ethical_guard/backend/: __init__.py  client_sdk.py  server_vllm.py
ethical_guard/data/: synthetic_jury.py  v2_dataset.py
ethical_guard/models/: configuration_guard.py  modeling_guard.py  tokenization_guard.py
ethical_guard/training/: distributed_launcher.py  trainer_sft.py
release/ethical-guard-v2-pypi/ethical_guard/data/: synthetic_jury.py
release/ethical-guard-v2-pypi/ethical_guard/models/: modeling_guard.py  v2_detector.py
release/ethical-guard-v2-pypi/ethical_guard/training/: distributed_launcher.py  train_v2.py
search/: search_index.json
security/: index.html
src/backend/: client_sdk.py  server_vllm.py
src/models/: tokenization_guard.py
tests/: adversarial_jailbreaks.py  benchmark_latency.py  test.py  test_capabilities.py  test_model_layers.py  test_sft_masking.py
user_manual/: index.html
